# ran

./: .gitignore  .prettierrc.toml  .rustfmt.toml  Cargo.toml  changelog.md  contributing.md  readme.md  release.md
.forgejo/workflows/: build.yml  release.yml
.github/workflows/: build.yml  release.yml
res/: app.toml  config.toml
src/: app.rs  cli.rs  config.rs  error.rs  handler.rs  helpers.rs  launcher.rs  main.rs  resolver.rs  utils.rs
