[package]
name = "ran"
description="RAN - Run Anything Now"
version = "0.1.0"
edition = "2024"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.56", features = ["derive", "env"] }
colored = "3.1.1"
comfy-table = "7.2.2"
dialoguer = "0.12.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"
walkdir = "2.5.0"
