[package]
name = "ran"
description="ran - run anything now"
version = "1.0.2"
edition = "2024"

[dependencies]
atty = "0.2.14"
clap = { version = "4.5.56", features = ["derive", "env"] }
colored = "3.1.1"
console = "0.16.2"
dialoguer = "0.12.0"
indexmap = "2.13.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
terminal_size = "0.4.3"
toml = "0.9.11"
walkdir = "2.5.0"
